k8s/sonarr/templates/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: sonarr
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`sonarr.kevingomez.fr`)
      middlewares:
        - name: forwardauth-authelia
          namespace: authelia
      services:
        - kind: Service
          name: sonarr
          port: http
  tls:
    certResolver: letsencrypt
